fixed spacing bugg on theme btn and updated other nav btn styling

--- a/src/app.css
+++ b/src/app.css
@@ -12,7 +12,9 @@
   --bg-one: aliceblue;
  
   --duration: 300ms;
+  
   --bounce-ease: cubic-bezier(.4,-0.46,.39,1.4);
+  --bounce: cubic-bezier(0.68,-0.55,0.27,1.55);
   --zip: cubic-bezier(.59,-0.08,.16,.87);
 }
 .test {
